k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web # this should mapping to the client-deployment
  ports: # the ClusterIP doen't have NodePort property because the clusterip doesn't publich to the outside world
    - port: 3000
      targetPort: 3000
