k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx #this configuration right here is essentially telling the kubernetes that we want to create a ingress controller base on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: /$1 #this is going to configure how the actual copy of nginx behave 
spec:
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
